--- a/src/Shared/SelectionField/SelectionField.module.css
+++ b/src/Shared/SelectionField/SelectionField.module.css
@@ -71,7 +71,6 @@
 	list-style: none;
 	transition: opacity 200ms;
 	z-index: 1;
-	max-height: 410px;
 	animation: show 200ms linear 0s 1 forwards normal;
 }
 .listScrollContainer {
@@ -80,10 +79,9 @@
 	-ms-overflow-style: none;
 	scrollbar-width: none;
 	overflow-y: auto;
-	height: 100%;
 	max-height: 410px;
 }
-.list::-webkit-scrollbar {
+.listScrollContainer::-webkit-scrollbar {
 	display: none;
 }
 
@@ -171,8 +169,8 @@
 }
 
 .rotateArrow {
-	width: 12px;
-	height: 12px;
+	width: 8px;
+	height: 8px;
 	position: absolute;
 	right: 10px;
 	top: 50%;
