--- a/src/Shared/FileUploadButton/ImagePreview/ImagePreview.module.css
+++ b/src/Shared/FileUploadButton/ImagePreview/ImagePreview.module.css
@@ -1,8 +1,48 @@
 .imagePreview {
-	width: 100%;
-	position: absolute;
-	background-color: #000000;
+    width: 100%;
+    position: absolute;
+    background-color: #18181c;
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+    border-radius: 4px;
+    z-index: 1;
+    animation-name: height-appear;
+    animation-duration: 150ms;
+    animation-timing-function: linear;
+    animation-fill-mode: forwards;
+    animation-delay: 0s;
+    animation-iteration-count: 1;
+    transform-origin: top center;
+    max-height: 80vh;
+    --height: 0px;
 }
-.img {
-	width: 100%;
+.hide {
+    animation-name: height-disappear;
+}
+.imgContainer {
+    padding: 1rem;
+}
+.imgContainer img {
+    max-width: 100%;
+}
+@keyframes height-appear {
+    0% {
+        height: 0px;
+        opacity: 0;
+    }
+    100% {
+        height: calc(var(--height) + 1.5rem);
+        opacity: 1;
+    }
+}
+@keyframes height-disappear {
+    0% {
+        height: calc(var(--height) + 1.5rem);
+        opacity: 1;
+    }
+    100% {
+        height: 0px;
+        opacity: 0;
+    }
 }
