--- a/src/Shared/Toasts/Components/ToastBody/ToastBody.module.css
+++ b/src/Shared/Toasts/Components/ToastBody/ToastBody.module.css
@@ -2,12 +2,32 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	background-color: #262629;
 	color: #fff;
-	padding: 16px;
-	border-radius: 8px;
+	padding: 1rem;
+	background-color: #2f2f2f;
+	border-radius: 4px;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 	margin-bottom: 16px;
+	position: relative;
+}
+.success {
+	border-left: 4px solid #007e33;
+	background-image: linear-gradient(125deg, rgba(0, 126, 51, 0.25), rgba(0, 126, 51, 0) 50%);
+}
+
+.error {
+	border-left: 4px solid #cc0000;
+	background-image: linear-gradient(125deg, rgba(204, 0, 0, 0.25), rgba(204, 0, 0, 0) 50%);
+}
+
+.warning {
+	border-left: 4px solid #ff8800;
+	background-image: linear-gradient(125deg, rgba(255, 136, 0, 0.25), rgba(255, 136, 0, 0) 50%);
+}
+
+.info {
+	border-left: 4px solid #0099cc;
+	background-image: linear-gradient(125deg, rgba(0, 153, 204, 0.25), rgba(0, 153, 204, 0) 50%);
 }
 
 .zoomIn {
@@ -17,46 +37,50 @@
 	margin-right: 16px;
 }
 
-.content {
-	flex-grow: 1;
-}
-
 .crossBtn {
-	background: none;
+	width: 15px;
+	height: 15px;
+	background-color: transparent;
 	border: none;
-	color: #fff;
-	cursor: pointer;
-	padding: 0;
+	position: absolute;
+	top: 0.5rem;
+	right: 0.5rem;
 }
-
 .cross {
+	position: relative;
 	display: inline-block;
-	width: 16px;
-	height: 16px;
-	background: url('path/to/cross-icon.svg') no-repeat center center;
-	background-size: contain;
+	width: 100%;
+	height: 100%;
+}
+.cross::after,
+.cross::before {
+	content: '';
+	position: absolute;
+	width: 100%;
+	height: 2px;
+	background-color: #aaaaaa;
+	top: 50%;
+	left: 50%;
+	translate: -50% -50%;
+	transition: background-color 200ms;
+}
+.cross::after {
+	rotate: 45deg;
+}
+.cross::before {
+	rotate: -45deg;
 }
 
-.icon {
-	margin-right: 16px;
-}
-
-.content {
-	flex-grow: 1;
-}
-
-.crossBtn {
-	background: none;
-	border: none;
-	color: #fff;
-	cursor: pointer;
-	padding: 0;
-}
-
-.cross {
-	display: inline-block;
-	width: 16px;
-	height: 16px;
-	background: url('path/to/cross-icon.svg') no-repeat center center;
-	background-size: contain;
+@media (hover: hover) and (pointer: fine) {
+	.crossBtn {
+		cursor: pointer;
+	}
+	.crossBtn:hover .cross::after,
+	.crossBtn:hover .cross::before {
+		background-color: #ffffff;
+	}
+	.crossBtn:active .cross::after,
+	.crossBtn:active .cross::before {
+		background-color: #686868;
+	}
 }
