--- a/src/Shared/Toasts/Components/ToastBody/ToastBody/ToastBody.module.css
+++ b/src/Shared/Toasts/Components/ToastBody/ToastBody/ToastBody.module.css
@@ -10,6 +10,9 @@
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 	margin-bottom: 16px;
 	position: relative;
+	transform: translateX(100%);
+	transition: transform 400ms;
+	pointer-events: auto;
 }
 .success {
 	border-left: 4px solid #007e33;
@@ -29,6 +32,11 @@
 .info {
 	border-left: 4px solid #0099cc;
 	background-image: linear-gradient(125deg, rgba(0, 153, 204, 0.25), rgba(0, 153, 204, 0) 50%);
+}
+
+.show {
+	transform: translateX(-1rem);
+	transition: transform cubic-bezier(0.68, -0.55, 0.27, 1.55) 400ms;
 }
 
 .icon {
