--- a/src/Shared/Toasts/Toasts/Toasts.module.css
+++ b/src/Shared/Toasts/Toasts/Toasts.module.css
@@ -1,10 +1,12 @@
 .toastContainer {
 	position: fixed;
-	right: 1rem;
+	right: 0;
 	bottom: 1rem;
 	list-style-type: none;
 	display: flex;
 	flex-direction: column;
 	align-items: flex-end;
 	z-index: 2;
+	user-select: none;
+	pointer-events: none;
 }
