--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:slnt,wght@-10..0,100..900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 html {
 	box-sizing: border-box;
 }
@@ -55,8 +54,7 @@ body {
 
 @media (hover: hover) and (pointer: fine) {
 	.hover-shadow:hover {
-		filter: drop-shadow(0px 0px 5px rgba(141, 141, 141, 0.616))
-			brightness(1.1);
+		filter: drop-shadow(0px 0px 5px rgba(141, 141, 141, 0.616)) brightness(1.1);
 	}
 	html::-webkit-scrollbar {
 		position: absolute;
