--- a/src/Shared/ScreenShadow/ScreenShadow.module.css
+++ b/src/Shared/ScreenShadow/ScreenShadow.module.css
@@ -1,24 +1,18 @@
 .shadowPage {
 	width: 100vw;
 	height: 100vh;
-	background-color: rgba(0, 0, 0, 0.5);
+	background-color: rgb(0, 0, 0);
 	position: fixed;
+	opacity: 0;
 	top: 0;
 	left: 0;
 }
 
-#shadowShow {
-	opacity: 1;
-	visibility: visible;
+.shadowShow {
+	opacity: 0.6;
 	transition: opacity 200ms linear;
 }
-#shadowHide {
-	opacity: 0;
-	visibility: hidden;
-	transition:
-		opacity 200ms linear,
-		visibility 0ms 200ms linear;
-}
+
 @media (pointer: coarse) {
 	.shadowPage {
 		width: 100vw;
